[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "enhance-api"
version = "0.0.1"
authors = [
  { name="okdshin", email="kokuzen@gmail.com" },
]
description = "Enhance LLM with reverse proxy"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
enhance-api = "enhance_api.main:serve"
